# TerminalWisely

./: BUILD.md  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
.cursor/rules/: release-versioning.mdc
.github/workflows/: build.yml  ci.yml  release-macos-intel.yml  release.yml
docs/: ROADMAP.md
release-notes/: v0.1.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  preview.rs  shell.rs  transfer.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/find/: local.rs  mod.rs  remote.rs
src-tauri/src/host_stats/: local.rs  mod.rs  remote.rs
src-tauri/src/process/: local.rs  mod.rs  remote.rs
src-tauri/src/pty/: local.rs
src-tauri/src/session/: mod.rs
src-tauri/src/ssh/: client.rs  mod.rs  probe.rs  sftp.rs  stream_transfer.rs
src/components/: ConnectionPanel.tsx  ErrorBoundary.tsx  FindPanel.tsx  FindTool.tsx  HostStatsTool.tsx  Modal.tsx  PreviewPanel.tsx  SendToDialog.tsx  ServerOsIcon.tsx  SidebarAddMenu.tsx  SidebarIcons.tsx  TabContextMenu.tsx  TabShortcutMenu.tsx  TaskManagerPanel.tsx  TaskManagerTable.tsx  TaskManagerTool.tsx  TerminalStatusOverlay.tsx  TerminalView.tsx  ToastContainer.tsx  TransferBar.tsx  TransferPanel.tsx  WorkspaceToolRail.tsx  WorkspaceWelcome.tsx
src/content/: productIntro.ts
src/lib/: connectError.ts  dragVisual.ts  fileType.ts  hostStatsFormat.ts  osLogos.ts  (+14 more)
(+24 files in other folders)
