[package]
name = "terminal-wisely"
version = "0.5.1"
description = "Cross-platform terminal with SSH and SFTP"
authors = ["WangYunfei"]
edition = "2021"

[lib]
name = "terminal_wisely_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
portable-pty = "0.8"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"
futures = "0.3"
dirs = "6"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
[target.'cfg(windows)'.dependencies]
netstat2 = "0.11"
